clusters/korriban/infrastructure/traefik/release.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: traefik-system
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/part-of: traefik
    network-policy/traefik: "true"
